# clsocket

./: CMakeLists.txt
examples/: TestMaxConnections.cpp
src/: SimpleSocket.cpp  SimpleSocket.h
